Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cca-groupt
  name: cca-groupt-service
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: cca-groupt
  type: ClusterIP
status:
  loadBalancer: {}
